code with javaFX GUI